--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.8.3",
+    "mysql2": "^3.9.6",
     "nodemon": "^2.0.20",
     "pdfkit": "^0.15.0",
+    "sequelize": "^6.37.3",
     "uuid": "^9.0.1"
   }
 }
